themes/Default/less/small.less
/* VARIABLESS/MIXINS
================================================== */

@import "vars.less";
@wrapperPercent: 85%;


/* GLOBAL
================================================== */

.wrapper {
	width: @wrapperPercent;
	min-width: 240px;
	margin: 0 auto;
}


/* Header
-------------------------------------------------- */

#masthead {
	padding: 1em 0;
	background-color: @mastheadBg;
	border-bottom: 1px solid rgba(0,0,0,0.1);
	box-shadow: 10px 0 15px rgba(0,0,0,0.1);

	h1 {
		font-size: 2em;
		margin-top: 0.3em;
	}

	.page-nav {
		margin: 1.5em auto 1em;

		ul ul {
			margin-left: 2em;
		}
		
		li {
			line-height: 1.5;
		}
	}
}


/* BLOG POSTS
================================================== */

article footer {
	margin-top: 2em;

	.pubdate p,
	.tags ul,
	.next *,
	.previous *,
	h3 {
		margin: 0;
	}

	h3 {
		font-size: 1em;
		float: left;
		width: 5em;
		font-weight: bold;
		
		&::after {
			content: ":";
		}
	}
	
	.tags li {
		display: inline;
		
		&::after {
			content: ",";
		}
		
		&:last-child::after {
			content: none;
		}
	}
}


/* POST ARCHIVES
================================================== */

.year-block,
.month-block {
	padding-left: 1em;
	border-left: 2px solid rgba(0,0,0,0.4);
}

.year-block > h2 a {
	color: rgba(0,0,0,0.6);
}

.month-block {
	border-color: rgba(0,0,0,0.2);
}

#drafts-all,
#posts-all,
#posts-by-date {
	article {
		padding: 0;
		margin: 1em 0;
	}
}

